# cyclicshift

./: .gitignore  README.md
Assets/Config/: SystemConfig.xml
Assets/Development/Actors/: enemy.xml  player.xml
Assets/Development/Config/: SystemConfig.xml
Assets/Development/Effects/GL30/: SimpleVertex2D.fs  SimpleVertex2D.vs  TexturedVertex.fs  TexturedVertex.vs
Assets/Development/Effects/GLES20/: SimpleVertex2D.fs  SimpleVertex2D.vs  TexturedVertex.fs  TexturedVertex.vs
Assets/Development/Textures/: zombie.xml
Docs/: README.txt  command_linux.txt  ctags.txt
Source/FEngine/: CMakeLists.txt
Source/FEngine/ActorManager/: Actor.cpp  Actor.hpp  ActorFactory.cpp  ActorFactory.hpp
Source/FEngine/ActorManager/Components/: Component.cpp  Component.hpp  ComponentFactory.cpp  ComponentFactory.hpp  KBComponent.cpp  KBComponent.hpp  MouseComponent.cpp  MouseComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  ViewComponent.cpp  ViewComponent.hpp
Source/FEngine/Debugging/: Log.cpp  Log.hpp  LogAndroid.cpp  LogAndroid.hpp  LogDefault.cpp  LogDefault.hpp  LogStub.cpp  LogStub.hpp
Source/FEngine/EventManager/: Event.hpp  EventManager.cpp  EventManager.hpp
Source/FEngine/Graphics2D/: Atlas.cpp  Atlas.hpp  Image.cpp  Image.hpp  ImagePNG.cpp  ImagePNG.hpp  PNGImage.cpp  PNGImage.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
Source/FEngine/Renderer/: Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  VertexDefinitions.hpp
Source/FEngine/Renderer/GL30/: GL30Renderer.cpp  GL30Renderer.hpp  Program.cpp  Program.hpp  SimpleVertex2DProgram.cpp  SimpleVertex2DProgram.hpp  TexturedVertexProgram.cpp
Source/FEngine/Renderer/GLES20/: GLES20Renderer.cpp  GLES20Renderer.hpp  Program.cpp  Program.hpp  RendererGLES20.cpp  RendererGLES20.hpp  SimpleVertex2DProgram.cpp  SimpleVertex2DProgram.hpp  TexturedVertexProgram.cpp  TexturedVertexProgram.hpp  Vertex3DProgram.cpp  Vertex3DProgram.h
Source/FEngine/ResourceCache/: IOManager.hpp  IOManagerDefault.cpp  IOManagerDefault.hpp
Source/FEngine/System/: App.cpp  App.hpp  Definitions.hpp  TypeDefs.hpp  WindowManager.hpp  WindowManagerLinux.cpp  WindowManagerLinux.hpp  WindowManagerWeb.cpp  WindowManagerWeb.hpp  WindowManagerWin.cpp
Source/FEngine/TmpGameCode/: Game.cpp  Game.hpp
Source/FEngine/Utility/: Math.cpp  Math.hpp  SmartPtr.cpp  SmartPtr.hpp  String.cpp  String.hpp
Source/Projects/Emscripten/: CMakeLists.txt  command.txt  main.cpp
Source/Projects/Linux/: .ycm_extra_conf.py  CMakeLists.txt  command.txt  main.cpp
Tools/AtlasMaker/: .gitignore
Tools/AtlasMaker/Assets/: SystemConfig.xml
Tools/AtlasMaker/Source/Common/: Support.hpp  System.cpp  System.hpp
Tools/AtlasMaker/Source/Projects/Linux/: CMakeLists.txt  command.txt  main.cpp
assets/config/: systemConfig.xml
source/: main.cpp
source/projects/linux/: CMakeLists.txt
